Implemented like and fun UI

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>My Pet Shop</title>
   <link rel="stylesheet" href="/styles/main.css"/>
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel=
+  'stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -10,6 +13,5 @@
 
   <script src="/scripts/vendor-bundle.js"></script>
   <script src="/scripts/app-bundle.js"></script>
-
 </body>
 </html>
